...
                ),
              ),
              SliverToBoxAdapter(
                child: SizedBox(height: 8),
              ),
              SliverM3ESegmentedList(
                key: const ValueKey('intakesList'),
                margin: pagePadding,
                padding: EdgeInsets.zero,
                color: Theme.of(context).colorScheme.surface,
                itemCount: intakes.length,
                itemBuilder: (context, index) {
                  return _buildIntakeTile(
...
